kube/hw03/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-hw3-deployment
  labels:
    app: alexmolokov-otus-hw03
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alexmolokov-otus-hw03
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: alexmolokov-otus-hw03
    spec:
      containers:
        - name: otus-hw3
          image: alexmolokov1311/otus-microservices:0.0.2
          ports:
            - containerPort: 8000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 8000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            failureThreshold: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
...
